--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,569 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif; */
+
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: 'Calibre-Regular';
+  /* font-family: 'Geist-Light', sans-serif; */
+  font-size: small;
+  background-color: black;
+  /* color: white; */
+  max-width: 100%;
+  overflow-x: hidden;
+  
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  /* font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace; */
+    font-family: 'Calibre-Regular';
+}
+
+
+
+body, html {
+  background-color: black; 
+  scroll-behavior: smooth;
+
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  background-color: black;
+  padding-top: 25px;
+  font-size: medium;
+}
+
+.nav {
+  display: flex;
+  padding-left: 20px;
+}
+
+ .nav div {
+margin-right: 20px;
+font-size: large;
+font-weight: bold;
+}
+
+.nav div a:hover{
+  color: #09f755;
+    transform: scale(1.2);
+    opacity: 0.5;
+  }
+
+
+.hire-me {
+  background-color: #09f755;
+  margin-top: 10px;
+  padding: 1rem 2rem;
+  margin-left: 60px;
+  text-decoration: none;
+  color: black;
+  border-radius: 10rem;
+  text-transform: uppercase;
+  font-size: 12px;
+  /* font-size: large; */
+  font-weight: bold;
+  /* font-family: $secondary-font; */
+  letter-spacing: 3px;
+  border: 1.5px solid transparent;
+  cursor: pointer;
+  transition: all .3s ease-in-out;
+  font-family: "Calibre-Bold", sans-serif;
+}
+
+.hire-me:hover{
+  color:white;
+  background-color: black;
+  border-color: white;
+}
+
+.home, .blogs{
+  a {
+    color: white; /* Use your desired color */
+    cursor: pointer;
+    text-decoration: none;
+  }
+}
+
+.social-links {
+  display: flex;
+  margin-right: 40px;
+  margin-top: 2px;
+}
+
+.social-links div {
+  margin-right: 15px;
+}
+
+.social-links img {
+  width: 30px;
+  height: 30px;
+}
+
+.social-links img:hover {
+  transform: scale(1.2);
+  opacity: 0.5;
+}
+
+.banner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 70vh; /* Full viewport height */
+  padding: 0 20px; /* Optional: Add padding to the sides */
+  color: white;
+}
+
+.one {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start; /* Align elements to the left */
+}
+
+.hi-there, .praneeth-text, .dev, .dev-2 {
+  margin: 5px 0; /* Space between the elements */
+  padding-left: 60px;
+}
+
+.dev-container {
+  margin-left: auto; /* Pushes "DEV" to the far right */
+  text-align: right;
+    position: absolute;
+      font-size: 150px;
+      font-family: Calibre,sans-serif;
+      opacity: .3;
+      margin-top: 10px;
+      right: -40px;
+      
+      transform: rotate(90deg)
+  }  
+
+/* Optional styling for the scroll-down div */
+.scroll-down {
+  width: 24px;
+  height: 24px;
+  background-color: #000; /* Example color, change as needed */
+  border-radius: 50%;
+  margin-top: 20px;
+  cursor: pointer;
+}
+
+.praneeth-text {
+  font-size: 80px;
+  background-image: linear-gradient(to right, #00F260, #800b07, #0575E6, #64f38c);
+    -webkit-background-clip: text;
+    background-clip: text;
+  
+  /* background: linear-gradient(to left, #FF0000 0%, #000000 100%); */
+  color: transparent;
+  background-clip: text; 
+  padding-bottom: 20px; /* Likely should adjust this value as it may not work as intended */
+  background-size: 300%;
+  background-position: -100%;
+  animation: moveGradient 5s linear infinite;
+
+}
+
+@keyframes moveGradient {
+  0% {
+    background-position: top left;
+  }
+  100% {
+    background-position: bottom right;
+  }
+}
+.hi-there {
+  margin-top: 100px;
+  font-size: 1.3rem;
+  letter-spacing: 3px;
+  padding-bottom: 20px; 
+}
+
+.dev {
+  color: green;
+  padding-bottom: 10px;
+}
+
+.dev-2{
+  color: #afa7a7;
+}
+
+.dev, .dev-2{
+  font-size: 1.2rem;
+}
+
+.scroll-down {
+  height: 50px;
+  width: 30px;
+  border: 2px ;
+  position: absolute;
+  left: 50%;
+  bottom: 20px;
+  border-radius: 50px;
+  cursor: pointer;
+}
+.scroll-down::before,
+.scroll-down::after {
+  content: "";
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  height: 10px;
+  width: 10px;
+  transform: translate(-50%, -100%) rotate(45deg);
+  border: 2px solid white;
+  border-top: transparent;
+  border-left: transparent;
+  animation: scroll-down 1s ease-in-out infinite;
+}
+.scroll-down::before  {
+  top: 30%;
+  animation-delay: 0.3s;
+  /* animation: scroll-down 1s ease-in-out infinite; */
+}
+
+@keyframes scroll-down {
+  0% {
+    /* top:20%; */
+    opacity: 0;
+  }
+  30% {
+    opacity: 1;
+  }
+  60% {
+    opacity: 1;
+  }
+  100% {
+    top: 90%;
+    opacity: 0;
+  }
+}
+
+
+.about-me {
+  font-family: 'Calibre-Regular';
+  width: 1000px;
+  height: 100%;
+  display: flex;
+  border-radius: 20px 20px 20px 20px;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: flex-start;
+  text-align: center;
+  background-color: #1C1C1C;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  margin-left: 250px;
+  font-weight: bold;
+}
+
+.title-bar {
+  display: flex;
+  align-items: center;
+  background-color: #e4e3e5;
+  height: 14px;
+  /* color: #ececec; */
+  padding: 8px 10px;
+  padding-left: 10px ;
+  border-radius: 20px 20px 0 0;
+}
+
+.mac-buttons {
+  display: flex;
+  position: absolute;
+  left: 270px;
+  
+}
+
+.mac-buttons button {
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  border: none;
+  margin-right: 8px;
+  cursor: pointer;
+}
+.content {
+  padding: 20px;
+  font-size: medium;
+  text-align: left;
+  margin-left: 8px;
+  /* color: grey; */
+  /* font-family: Monaco,Consolas,Lucida Console,monospace; */
+}
+
+.input-statement{
+  padding-bottom: 2px;
+  color:  lightgreen;
+}
+
+.output{
+  color: white;
+}
+
+.datetime{
+  color: white;
+}
+
+/* Initial state with no opacity */
+.wrapper-hidden {
+  opacity: 0;
+}
+.close {
+  background-color: #ff5f56;
+}
+
+.minimize {
+  background-color: #ffbd2e;
+}
+
+.maximize {
+  background-color: #27c93f;
+}
+
+.about-me{
+  margin-top: 400px;
+}
+
+.output{
+  color: lightskyblue;
+  a {
+    color: lightskyblue; /* Use your desired color */
+    cursor: pointer;
+    text-decoration: underline;
+  }
+}
+
+.featured-projects{
+  font-size: medium;
+  color: grey;
+  margin-left: -1100px;
+  text-transform: capitalize;
+
+}
+ .heading-2 {
+  margin-left: -1000px;
+  color: white;
+  font-size: 1.5rem;
+  text-transform: capitalize;
+}
+
+.heading-3{
+  font-size: 2.1rem;
+  font-weight: bold;
+  text-align: justify;
+  text-justify: inter-word;
+}
+
+.heading-5{
+  font-weight: bold;
+}
+
+.project {
+  /* margin-top: 50rem; */
+  grid-column: 3/6;
+  
+  padding: 6rem;
+
+}
+
+.project-box__wrapper {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  /* grid-gap: 4rem; */
+  row-gap: 4rem;
+  color: black; /* Replace $black with the actual color value */
+  margin-top: 6rem;
+}
+
+.project-box {
+  /* padding: 2rem; */
+  height: 20rem;
+  width: 20rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: relative;
+}
+
+.project-box:hover {
+  border: solid 2px white; /* Replace $white with the actual color value */
+  color: white; /* Replace $white with the actual color value */
+}
+
+.project-box:nth-child(1) {
+  background: linear-gradient(to bottom, #F3CBAB, #FEEDCA);
+}
+
+.project-box:nth-child(2) {
+  background: linear-gradient(to bottom, #B1E5F9, #F4D2FE);
+}
+
+.project-box:nth-child(3) {
+  background: linear-gradient(to bottom, #DBB4F3, #EFB7D7);
+}
+
+.project-box:nth-child(4) {
+  background: linear-gradient(to bottom, #EFA971, #E4CAFE);
+}
+
+.project-box:nth-child(4) .project-box__link {
+  width: min-content;
+}
+
+.project-box:nth-child(5) {
+  background: linear-gradient(to right, #B1E5F9, #F4D2FE);
+}
+
+.project-box:nth-child(5) .project-box__link {
+  width: min-content;
+}
+
+.project-box__link {
+  align-self: flex-end;
+  width: 20%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+@media only screen and (max-width: 56.25em) {
+  .project-box__link {
+      width: 30%;
+  }
+}
+
+.project-box__content {
+  align-self: center;
+}
+
+/* Hover state */
+.project-box:nth-child(1),
+.project-box:nth-child(2),
+.project-box:nth-child(3),
+.project-box:nth-child(4),
+.project-box:nth-child(5) {
+  background: linear-gradient(to bottom, #F3CBAB, #FEEDCA);
+}
+
+.project-box:nth-child(1):after,
+.project-box:nth-child(2):after,
+.project-box:nth-child(3):after,
+.project-box:nth-child(4):after,
+.project-box:nth-child(5):after {
+  content: '';
+  position: absolute;
+  width: 103%;
+  height: 101%;
+  top: 1rem;
+  right: 0;
+  z-index: -1;
+}
+
+.project-box:nth-child(1):hover,
+.project-box:nth-child(2):hover,
+.project-box:nth-child(3):hover,
+.project-box:nth-child(4):hover,
+.project-box:nth-child(5):hover {
+  background: none;
+  background-color: black; /* Replace $black with the actual color value */
+}
+
+.project-box:nth-child(1):hover img,
+.project-box:nth-child(2):hover img,
+.project-box:nth-child(3):hover img,
+.project-box:nth-child(4):hover img,
+.project-box:nth-child(5):hover img {
+  filter: invert(1);
+}
+
+.project-box:nth-child(1):hover:after,
+.project-box:nth-child(2):hover:after,
+.project-box:nth-child(3):hover:after,
+.project-box:nth-child(4):hover:after,
+.project-box:nth-child(5):hover:after {
+  outline: 2px solid white; /* Replace $white with the actual color value */
+}
+
+
+.github-black-logo{
+  padding-top: 8px;
+  width: 20px;
+}
+
+#github-black-logo{
+  padding-right: 50px;
+  padding-top: 10px;
+  width: 20px;
+}
+
+.logo-link{
+  padding-right: 10px;
+  padding-top: 10px;
+  width: 25px;
+}
+
+.heading-contact{
+  font-size: 1rem;
+  margin-left: -1200px;
+  text-transform: capitalize;
+  color: grey;
+   
+}
+
+.email-contact{
+  margin-left: -500px;
+  font-size: medium;
+  color: grey;
+}
+
+
+
+.contact a:hover{
+  color: #09f755;
+
+}
+
+.contact a{
+  margin-left: -100px;
+  color: white;
+  font-size:xx-large;
+  text-decoration: none;
+  transition: color .2s ease-in-out;
+}
+
+.phone-contact{
+  margin-left: -700px;
+  font-size: medium;
+  color: grey;
+}
+
+#email-contact, #phone-contact {
+  display: inline-block;
+  vertical-align: top; /* Aligns them at the top */
+  width: 48%; /* Adjust width as needed */
+  margin-right: 2%; 
+}
+
+#phone-contact {
+  margin-right: 20px; 
+}
+
+.praneeth-regonda{
+  font-size: large;
+  color: grey;
+  margin-right: 950px;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 4rem;
+  
 }
