--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,12 @@ body {
   
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 code {
   /* font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace; */
@@ -39,6 +45,35 @@ body, html {
   padding-top: 25px;
   font-size: medium;
 }
+
+.home, .blogs{
+  a {
+    color: white; /* Use your desired color */
+    cursor: pointer;
+    text-decoration: none;
+  }
+}
+
+.social-links {
+  display: flex;
+  margin-right: 40px;
+  margin-top: 2px;
+}
+
+.social-links div {
+  margin-right: 15px;
+}
+
+.social-links img {
+  width: 30px;
+  height: 30px;
+}
+
+.social-links img:hover {
+  transform: scale(1.2);
+  opacity: 0.5;
+}
+
 
 .nav {
   display: flex;
@@ -84,32 +119,30 @@ font-weight: bold;
   border-color: white;
 }
 
-.home, .blogs{
-  a {
-    color: white; /* Use your desired color */
-    cursor: pointer;
-    text-decoration: none;
-  }
+.about-me{
+  color: black;
+  font-size: 80px;
+  line-height: 100px;
+  letter-spacing: -1px;
+  /* padding-top: 200px; */
+  background-color: white;
+  padding-bottom: 300px;
 }
 
-.social-links {
-  display: flex;
-  margin-right: 40px;
-  margin-top: 2px;
+.about-me div{
+  padding-top: 200px;
 }
 
-.social-links div {
-  margin-right: 15px;
+.about-me h4{
+  transition: color .2s ease-in-out;
 }
 
-.social-links img {
-  width: 30px;
-  height: 30px;
+.about-me h4:hover{
+  color: #09f755;
 }
 
-.social-links img:hover {
-  transform: scale(1.2);
-  opacity: 0.5;
+.about-me h2{
+  font-size: 40px;
 }
 
 .banner {
@@ -117,8 +150,9 @@ font-weight: bold;
   justify-content: space-between;
   align-items: center;
   height: 70vh; /* Full viewport height */
-  padding: 0 20px; /* Optional: Add padding to the sides */
+  /* padding: 0 20px; Optional: Add padding to the sides */
   color: white;
+  margin-bottom: 200px;
 }
 
 .one {
@@ -145,19 +179,11 @@ font-weight: bold;
       transform: rotate(90deg)
   }  
 
-/* Optional styling for the scroll-down div */
-.scroll-down {
-  width: 24px;
-  height: 24px;
-  background-color: #000; /* Example color, change as needed */
-  border-radius: 50%;
-  margin-top: 20px;
-  cursor: pointer;
-}
+
 
 .praneeth-text {
   font-size: 80px;
-  background-image: linear-gradient(to right, #00F260, #800b07, #0575E6, #64f38c);
+  background-image: linear-gradient(to right, #d3cce3, #800b07, #0575E6, #e9e4f0);
     -webkit-background-clip: text;
     background-clip: text;
   
@@ -202,6 +228,7 @@ font-weight: bold;
 .scroll-down {
   height: 50px;
   width: 30px;
+  background-color: #000;
   border: 2px ;
   position: absolute;
   left: 50%;
@@ -226,12 +253,10 @@ font-weight: bold;
 .scroll-down::before  {
   top: 30%;
   animation-delay: 0.3s;
-  /* animation: scroll-down 1s ease-in-out infinite; */
 }
 
 @keyframes scroll-down {
   0% {
-    /* top:20%; */
     opacity: 0;
   }
   30% {
@@ -247,22 +272,6 @@ font-weight: bold;
 }
 
 
-.about-me {
-  font-family: 'Calibre-Regular';
-  width: 1000px;
-  height: 100%;
-  display: flex;
-  border-radius: 20px 20px 20px 20px;
-  flex-direction: column;
-  align-items: stretch;
-  justify-content: flex-start;
-  text-align: center;
-  background-color: #1C1C1C;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-  margin-left: 250px;
-  font-weight: bold;
-}
-
 .title-bar {
   display: flex;
   align-items: center;
@@ -274,71 +283,14 @@ font-weight: bold;
   border-radius: 20px 20px 0 0;
 }
 
-.mac-buttons {
-  display: flex;
-  position: absolute;
-  left: 270px;
-  
-}
 
-.mac-buttons button {
-  width: 12px;
-  height: 12px;
-  border-radius: 50%;
-  border: none;
-  margin-right: 8px;
-  cursor: pointer;
-}
 .content {
   padding: 20px;
   font-size: medium;
   text-align: left;
   margin-left: 8px;
-  /* color: grey; */
-  /* font-family: Monaco,Consolas,Lucida Console,monospace; */
 }
 
-.input-statement{
-  padding-bottom: 2px;
-  color:  lightgreen;
-}
-
-.output{
-  color: white;
-}
-
-.datetime{
-  color: white;
-}
-
-/* Initial state with no opacity */
-.wrapper-hidden {
-  opacity: 0;
-}
-.close {
-  background-color: #ff5f56;
-}
-
-.minimize {
-  background-color: #ffbd2e;
-}
-
-.maximize {
-  background-color: #27c93f;
-}
-
-.about-me{
-  margin-top: 400px;
-}
-
-.output{
-  color: lightskyblue;
-  a {
-    color: lightskyblue; /* Use your desired color */
-    cursor: pointer;
-    text-decoration: underline;
-  }
-}
 
 .featured-projects{
   font-size: medium;
@@ -363,6 +315,7 @@ font-weight: bold;
 
 .heading-5{
   font-weight: bold;
+  padding-top: 5px;
 }
 
 .project {
@@ -441,6 +394,7 @@ font-weight: bold;
 
 .project-box__content {
   align-self: center;
+  padding-bottom: 10px;
 }
 
 /* Hover state */
@@ -506,7 +460,7 @@ font-weight: bold;
 .logo-link{
   padding-right: 10px;
   padding-top: 10px;
-  width: 25px;
+  width: 30px;
 }
 
 .heading-contact{
@@ -521,6 +475,10 @@ font-weight: bold;
   margin-left: -500px;
   font-size: medium;
   color: grey;
+}
+
+.email-phone{
+  padding-top: 20px;
 }
 
 
@@ -546,10 +504,35 @@ font-weight: bold;
 
 #email-contact, #phone-contact {
   display: inline-block;
-  vertical-align: top; /* Aligns them at the top */
-  width: 48%; /* Adjust width as needed */
+  vertical-align: top; 
+  width: 48%; 
   margin-right: 2%; 
 }
+
+#email-contact a,
+#phone-contact a {
+  display: block;        
+  margin-top: 15px;       
+  text-decoration: none; 
+}
+
+#email-contact a {
+  margin-left: 20px;
+}
+
+#phone-contact a {
+  margin-left: -300px;
+}
+
+#email-contact h3,
+#phone-contact h3 {
+  margin-bottom: 15px;    
+}
+
+h3 a {
+    padding-top: 20px;
+}
+
 
 #phone-contact {
   margin-right: 20px; 
@@ -567,3 +550,55 @@ font-weight: bold;
   padding-top: 4rem;
   
 }
+
+skills-title-container {
+  position: relative;
+  margin: 2rem 0 1.5rem;
+}
+
+.skills-title {
+  display: inline-block;
+  background: var(--clr-body-bcg);
+  padding-top: 0px;
+  margin-bottom: 0;
+  font-size: 100px;
+
+}
+
+.skills-title:hover{
+  transition: color .2s ease-in-out;
+  color: #09f755;
+
+}
+
+.skills-line {
+  height: 2px;
+  background: var(--clr-primary-gradient);
+  position: absolute;
+  width: 60%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+}
+
+.skills-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 1.5rem 0.75rem;
+}
+
+.skill-icon {
+  width: 5rem;
+  object-fit: contain;
+  height: 5rem;
+  transition: var(--transition);
+}
+.skill-icon:hover {
+    transform: scale(1.2);
+    opacity: 0.5;
+  }
+
+
