--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,7 @@ code {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: 100svh;
   background:  rgb(60, 66, 55);
   display: flex;
   justify-content: center;
